--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <a class="nav-link" href="#Biodata">Biodata</a>
               </li>
               <li>
-                <a class="nav-link" href="#Task">Task</a>
+                <a class="nav-link" href="#My Project">My Project</a>
               </li>
               <li>
                 <a class="nav-link" href="#Contact">Contact</a>
@@ -103,7 +103,7 @@
         <a class="nav-link" href="#Biodata">Biodata</a>
       </li>
       <li class="nav-item-item">
-        <a class="nav-link" href="#Task">Task</a>
+        <a class="nav-link" href="#My Project">My Project</a>
       </li>
       <li class="nav-item-item">
         <a class="nav-link" href="#Certificated">Certificated</a>
@@ -374,7 +374,7 @@
         class="achive fw-bold"
       >
      
-        TASK
+        My Project
       </h2>
       <div class="container">
         <div
